CANDLEPIN-1108: Improved functionality & handling of deleted consumers
- Removed the unique constraint on cp_deleted_consumers.consumer_uuid
  as this causes many complications (uuids are reusable) and
  performance issues
- Updated DeletedConsumerCurator.createDeletedConsumers to use
  native upsert-style statements instead of individual JPA-based
  query, insert, and update operations
- Updated the DeletedConsumerCurator.findByConsumerUuid to return
  a list of entities, as multiple can exist for a given UUID
- DeletedConsumer.id is no longer a generated value; instead this is
  expected to be populated from the ID of the consumer that was
  deleted
- Updated logging for InactiveConsumerCleanerJob
- Changed the type on the InactiveConsumerCleanerJob.BATCH_SIZE
  from string to an int
- Removed DeletedConsumerCurator queries that accept a consumer
- Updated ConsumerResource to be compatible with the internal
  structural changes above
- Updated several tests and test suites accordingly